tests/sksl/errors/ReservedNameGoto.glsl
### Compilation failed:

error: 1: name 'goto' is reserved
int goto;
    ^^^^
1 error
